Corrigindo Controllers